Fix too-broad selection for overflow: visible

--- a/apps/lab/resources/css/common.css
+++ b/apps/lab/resources/css/common.css
@@ -113,7 +113,7 @@ body, body.sc-theme, .sc-theme .sc-pane.sc-main {
   cursor: pointer;
 }
 
-.sc-view {
+.sc-view.hint-available {
   overflow: visible;
 }
 
